; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/corpses/extr_corpse.c_corpses_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/corpses/extr_corpse.c_corpses_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"-no_corpses\00", align 1
@FALSE = common dso_local global i32 0, align 4
@corpse_enabled_config = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"exc_via_corpse_forking\00", align 1
@exc_via_corpse_forking = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"corpse_for_fatal_memkill\00", align 1
@corpse_for_fatal_memkill = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @corpses_init() #0 {
  %1 = alloca [20 x i8], align 16
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds [20 x i8], [20 x i8]* %1, i64 0, i64 0
  %5 = call i64 (i8*, ...) @PE_parse_boot_argn(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %4, i64 20)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* @corpse_enabled_config, align 4
  br label %9

9:                                                ; preds = %7, %0
  %10 = call i64 (i8*, ...) @PE_parse_boot_argn(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32* %2, i64 4)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i32, i32* %2, align 4
  store i32 %13, i32* @exc_via_corpse_forking, align 4
  br label %14

14:                                               ; preds = %12, %9
  %15 = call i64 (i8*, ...) @PE_parse_boot_argn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32* %3, i64 4)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* @corpse_for_fatal_memkill, align 4
  br label %19

19:                                               ; preds = %17, %14
  ret void
}

declare dso_local i64 @PE_parse_boot_argn(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
